--- a/main.html
+++ b/main.html
@@ -3,24 +3,32 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/ctrl.js"></script>
+<head>
+    <link href="css/main-styles.css" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
 
 <div ng-app="myApp" ng-controller="customersCtrl">
- 
-<p>Input something in the input box:</p>
-<p>Name: <input type="text" ng-model="name"></p>
-<p ng-bind="name"></p>
-<ul>
-    <li ng-repeat="list in shoppingList">{{list}} <button ng-click="removeItem($index)">X</button>
-        <button ng-click="editItem(list)" set-focus='newItem'>edit</button>
-    </li>
-</ul>
-<input type="text" id="newItem" ng-model="newItem" ng-focus="clearMsg()" input-focus-function="focusOnSaveInput" />
-<button ng-click="addItem()">+</button>
+ <input placeholder="search" ng-model="searchQuery" name="searcQuery"/>
+<form name="myForm">
+<input type="text" id="newItem" name="newItem" ng-required="true" ng-model="newItem" ng-focus="clearMsg()" />
+<button ng-click="addItem()" ng-disabled="myForm.newItem.$error.required">+</button>
+
+</form>
 <div ng-show="showError">{{errorMsg}}</div>
+<ul>
+    <li ng-repeat="list in shoppingList | filter:searchQuery">
+        <input type="text" id="list_edit_field_{{$index}}" ng-model="list" style="display:none" class="edit-mode-off"/>
+        <input type="checkbox" name="markItemDone-{{$index}}" id="mark_item_done_{{$index}}" ng-click="checkedItem($index)" />
+        <span id="item_text_{{$index}}" class="test-class">{{list}} </span>
+        <button ng-click="" id="remove_btn_{{$index}}" confirmed-click="removeItem($index)" 
+    ng-confirm-click="Are you sure want to delete {{list}} ?" >X</button>
+        <button ng-click="editItem($index)" id="edit_btn_{{$index}}">edit</button>
+    </li> 
+</ul>
+
 </div>
-<div class="edit-area-form">
-    
-</div>
+
 </body>
 </html>
