--- a/main.html
+++ b/main.html
@@ -18,18 +18,31 @@
 
 </form>
 <div ng-show="showError">{{errorMsg}}</div>
-<ul>
+<ul> 
+    <input type="checkbox" name="checkAllBoxes" ng-model="checkAll" ng-true-value="'true'" ng-click="checkAllItem(checkAll,clock.now | date:'dd/MM/yy h:mm:ss a')" />
     <li ng-repeat="list in shoppingList  | filter:searchQuery track by $index">
         <input type="text" id="list_edit_field_{{$index}}" ng-model="list.itemName" style="display:none" class="edit-mode-off"/>
-        <input type="checkbox" name="markItemDone-{{$index}}" id="mark_item_done_{{$index}}" ng-click="checkedItem($index)" ng-checked="list.itemChecked" />
-        <span id="item_text_{{$index}}" ng-class="{'marked-item' : list.itemChecked}">{{list.itemName}} / status:{{list.itemChecked}} </span>
+        <input type="checkbox" name="markItemDone-{{$index}}" id="mark_item_done_{{$index}}" ng-click="checkedItem($index,clock.now | date:'dd/MM/yy h:mm:ss a');" ng-checked="list.itemChecked" />
+        <span id="item_text_{{$index}}" ng-class="{'marked-item' : list.itemChecked}">{{list.itemName}} / status:{{list.itemChecked}} / time of checking : {{list.checkedTime}} </span>
         <button ng-click="" id="remove_btn_{{$index}}" confirmed-click="removeItem($index)" 
     ng-confirm-click="Are you sure want to delete {{list.itemName}} ?" ng-hide="list.itemChecked" >X</button>
         <button ng-click="editItem($index)" id="edit_btn_{{$index}}" ng-hide="list.itemChecked">edit</button>
+        
     </li> 
+</ul>
+<ul>
+    <li ng-repeat="doneItems in shoppingList | filter:{itemChecked:true} track by $index">
+        {{doneItems.itemName}}
+    </li>
 </ul>
 <div id ="item_counter" class="counter">{{( shoppingList | filter: { itemChecked:false } ).length}} item(s) are in the list</div>
 <div>{{( shoppingList | filter: { itemChecked:true } ).length}} item(s) are done</div>
+
+{{ clock.now | date:'dd/MM/yy h:mm:ss a' }}
+value of check all is {{checkAll}}
+
+<div>filters:</div>
+<span>completed</span><span>Active</span><span>clear completed</span>
 
 </div>
 
